@startuml
' uncomment the line below if you're using computer with a retina display
' skinparam dpi 300
!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>
' we use bold for primary key
' green color for unique
' and underscore for not_null
!define primary_key(x) <b>x</b>
!define unique(x) <color:green>x</color>
!define not_null(x) <u>x</u>
' other tags available:
' <i></i>
' <back:COLOR></color>, where color is a color name or html color code
' (#FFAACC)
' see: http://plantuml.com/classes.html#More
hide methods
hide stereotypes

' entities

Table(user, "User") {
    primary_key(id) User.Id
    name String
    email String
    phone String
}

Table(account, "Account") {
    primary_key(id) Account.Id
    not_null(userId) String
    currency Currency
    balance BigDecimal
    not_null(hold) Hold.Id
}

Table(hold, "Hold") {
    primary_key(id) Hold.Id
    not_null(transactionId) Transaction.Id
    not_null(amount) BigDecimal
    not_null(status) TransactionStatus
}

Table(transaction, "Transaction") {
    primary_key(id) Transaction.Id
    parentId Transaction.Id
    from Account.Id
    to Account.Id
    not_null(amount) BigDecimal
    not_null(type) TransactionType
    not_null(dateTime) LocalDateTime
    not_null(status) TransactionStatus
    children Transaction.Id
}

user "1" <-- "0..N" account : "userId"
account "1" --> "0..N" hold : "holdId"
transaction "1" <-- "1" hold: "transactionId"
transaction "0..N" --> "1" transaction: "parentId"
transaction "1" --> "0..N" transaction: "children"
@enduml
